<resources>
    <string name="app_name" translatable="false">ReVibeMarket</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="signup_address_hint">Address</string>
    <string name="collection">Collection</string>
    <string name="facebook_app_id" translatable="false">786386156632028</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="shop_now">Shop Now</string>
    <string name="description">Description</string>
    <string name="stock">Stock</string>
    <string name="address">Address</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="update_product">Update product</string>
    <string name="update">UPDATE</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_email">Send email</string>
    <string name="back_to_login">Back to login ?</string>
    <string name="login">Login</string>
    <string name="login_as">Login as</string>
    <string name="search">Search</string>
    <string name="searching_for">Searching for:</string>
    <string name="add_product">Add product</string>
    <string name="add">ADD</string>
    <string name="my_cart">My Cart</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="payment_method">Payment method</string>
    <string name="total">Total</string>
    <string name="order">ORDER</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="explore">Explore</string>
    <string name="category">Category</string>
    <string name="all_products">All Products</string>
    <string name="location">Location</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="best_deal">Best Deal</string>
    <string name="see_all">See all</string>
    <string name="language">Language</string>
    <string name="my_order">My Order</string>
    <string name="total_orders">Total orders</string>
    <string name="my_product">My Product</string>
    <string name="total_products">Total products</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="update_profile">Update profile</string>
    <string name="settings">Settings</string>
    <string name="anonymous">Anonymous</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="product">Product</string>
    <string name="my_products">My Products</string>
    <string name="my_orders">My Orders</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="list_of_product">List of product</string>
    <string name="remove">Remove</string>
    <string name="edit">edit</string>
    <string name="see_product">See product</string>
    <string-array name="categories_english">
        <item>Clothing</item>
        <item>Phones</item>
        <item>Electronics</item>
        <item>Food and Drink</item>
        <item>Books</item>
        <item>Appliances</item>
        <item>Medicals</item>
        <item>Beauty</item>
        <item>Automobiles</item>
        <item>Toys</item>
    </string-array>
    <string name="default_web_client_id" translatable="false">226368054818-fgh5mndc4mj7s5pb1mmrbvfnq831unci.apps.googleusercontent.com</string>
    <string name="sold_product">Sold Product</string>
    <string name="buyer">Buyer:</string>
    <string name="accept">Accept</string>

</resources>