<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context="com.example.revibemarket.LoginRegister.Login">
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">




                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">


                    <ScrollView
                        tools:context=".Settings.SettingFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/contentBodyColor">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="30dp">

                            <TextView
                                style="@style/viewParent.headerText"
                                android:text="@string/settings"
                                android:fontFamily="@font/poppins_thin"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/cardView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:cardCornerRadius="100dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                    <ImageView
                                        android:id="@+id/profileCircleImageView"
                                        android:layout_width="80dp"
                                        android:layout_height="80dp"
                                        android:scaleType="center"
                                        app:srcCompat="@drawable/avatar" />
                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:id="@+id/usernameTextView"
                                    style="@style/viewParent.headerText"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="20dp"
                                    android:layout_toRightOf="@id/cardView"
                                    android:fontFamily="@font/poppins_thin"
                                    android:text="@string/anonymous"
                                    android:textSize="18sp" />


                            </RelativeLayout>


                            <TextView
                                style="@style/viewParent.headerText.settingsMiniTitle"
                                android:text="@string/profile"
                                android:fontFamily="@font/poppins_light"/>

                            <TextView
                                android:id="@+id/profile"
                                style="@style/viewParent.headerText.settingsTextIcon"
                                android:drawableLeft="@drawable/ic_edit_profile"
                                android:text="@string/edit_profile"
                                android:fontFamily="@font/poppins_thin"/>

                            <TextView
                                android:id="@+id/editPassword"
                                style="@style/viewParent.headerText.settingsTextIcon"
                                android:layout_marginTop="10dp"
                                android:drawableLeft="@drawable/ic_edit_password"
                                android:text="@string/change_password" />

                            <TextView
                                style="@style/viewParent.headerText.settingsMiniTitle"
                                android:text="@string/product"
                                android:fontFamily="@font/poppins_light"/>

                            <TextView
                                android:id="@+id/product"
                                style="@style/viewParent.headerText.settingsTextIcon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/product"
                                android:fontFamily="@font/poppins_thin"
                                android:text="@string/my_products" />

                            <TextView
                                android:id="@+id/orders"
                                style="@style/viewParent.headerText.settingsTextIcon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/order"
                                android:fontFamily="@font/poppins_thin"
                                android:text="@string/my_orders" />

                            <TextView
                                android:id="@+id/soldProduct"
                                style="@style/viewParent.headerText.settingsTextIcon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/sell"
                                android:fontFamily="@font/poppins_thin"
                                android:text="@string/sold_product" />

                            <TextView
                                style="@style/viewParent.headerText.settingsMiniTitle"
                                android:text="@string/regional"
                                android:fontFamily="@font/poppins_light"/>

                            <TextView
                                android:id="@+id/editLanguage"
                                style="@style/viewParent.headerText.settingsTextIcon"
                                android:drawableLeft="@drawable/ic_languages"
                                android:text="@string/language"
                                android:fontFamily="@font/poppins_thin"/>

                            <TextView
                                android:id="@+id/btnLogout"
                                style="@style/viewParent.headerText.settingsTextIcon"
                                android:drawableLeft="@drawable/ic_logout"
                                android:text="@string/logout"
                                android:fontFamily="@font/poppins_thin"/>


                            <TextView
                                style="@style/viewParent.headerText.settingsMiniTitle"
                                android:text="@string/app_name"
                                android:textAlignment="center"
                                android:fontFamily="@font/poppins_light"/>
                        </LinearLayout>
                    </ScrollView>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>