<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context="com.example.revibemarket.LoginRegister.Login">
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">


                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="@string/forgot_password"
                    android:fontFamily="@font/poppins_thin"
                    android:layout_marginTop="40dp"/>

                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">



                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <TextView
                            android:id="@+id/txtHeader"
                            style="@style/headerTextPrimary"
                            android:fontFamily="@font/poppins_thin"
                            android:text="Email"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextEmail"
                                android:fontFamily="@font/poppins_light"
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/login_email_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>



                        <Button
                            android:id="@+id/buttonSendEmail"
                            style="@style/loginButton"
                            android:text="@string/send_email"
                            android:fontFamily="@font/poppins_thin"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin" />

                        <TextView
                            android:id="@+id/buttonBackToLogin"
                            style="@style/parent"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/primaryTextColor"
                            android:text="@string/back_to_login"
                            android:fontFamily="@font/poppins_light"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <ImageView
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>